--- a/src/Component/Styles/Pagination.css
+++ b/src/Component/Styles/Pagination.css
@@ -17,7 +17,7 @@
   }
   .dataContainer{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr ;
+    grid-template-columns: 1fr 1fr ;
     /* display: flex;
     flex-direction: row; */
     justify-content: space-evenly;
