--- a/src/Component/Styles/Home.css
+++ b/src/Component/Styles/Home.css
@@ -19,6 +19,14 @@
 .parentDiv{
     margin-left: 100px;
 }
+.parentDiv button{
+    width: 30%;
+    height: 4em;
+    font-size: 20px;
+    border-radius: 10px;
+    color: green;
+    background-color:rgba(255, 255, 0, 0.749);
+}
 
 .users-heading{
     color: yellow;
