--- a/src/Component/Styles/Home.css
+++ b/src/Component/Styles/Home.css
@@ -20,7 +20,7 @@
     margin-left: 100px;
 }
 .parentDiv button{
-    width: 30%;
+    width: 150px;
     height: 4em;
     font-size: 20px;
     border-radius: 10px;
